--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
 <div id="login-screen">
     <div id="login-box">
-        <h3 style="color: var(--primary); margin-bottom: 10px;">🔒 Privado</h3>
-        <input type="password" id="passInput" placeholder="Clave" maxlength="4" inputmode="numeric">
+        <h3 style="color: var(--primary); margin-bottom: 10px;">🔒 Acceso Privado</h3>
+        <input type="password" id="passInput" placeholder="0000" maxlength="4" inputmode="numeric">
         <button id="loginBtn" onclick="checkPass()">Entrar</button>
     </div>
 </div>
