--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
 <div id="login-screen">
     <div id="login-box">
-        <h3 style="color: var(--primary); margin-bottom: 10px;">🔒 Privado</h3>
-        <input type="password" id="passInput" placeholder="Clave" maxlength="4" inputmode="numeric">
+        <h3 style="color: var(--primary); margin-bottom: 10px;">🔒 Acceso Privado</h3>
+        <input type="password" id="passInput" placeholder="0000" maxlength="4" inputmode="numeric">
         <button id="loginBtn" onclick="checkPass()">Entrar</button>
     </div>
 </div>
@@ -101,7 +101,7 @@
         </div>
         <div class="input-row">
             <input type="file" id="fileInput" accept="image/*" style="display:none">
-            <input type="text" id="msgInput" placeholder="Escribe un mensaje..." autocomplete="off">
+            <input type="text" id="msgInput" placeholder="Escríbele a tu pareja..." autocomplete="off">
             <button id="sendBtn" onclick="enviar()">➤</button>
         </div>
     </footer>
@@ -243,7 +243,7 @@
     };
     onValue(ref(db, 'status'), (s) => {
         const d = s.val(); let t = "";
-        for(let id in d) if(id !== myId) t = d[id]?.action === 'grabando' ? "Grabando..." : "Escribiendo...";
+        for(let id in d) if(id !== myId) t = d[id]?.action === 'grabando' ? "Tu pareja está Grabando..." : "Tu pareja está Escribiendo...";
         document.getElementById('status').textContent = t;
     });
 </script>
